tests/lean/letArrowOutsideDo.lean.expected.out
letArrowOutsideDo.lean:2:7-2:9: error: unexpected token 'â†'; expected ':=' or '|'
