tests/lean/letArrowOutsideDo.lean
def myFun (n : Nat) : IO Nat :=
  let q â† (10 : Nat)
  n + q
